@@ -143,6 +143,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #24454: Regular expression match object groups are now
+  accessible using __getitem__.  "mo[x]" is equivalent to
+  "mo.group(x)".
+
 - Issue #10740: sqlite3 no longer implicitly commit an open transaction
   before DDL statements.
 
